# cot_controllability

./: .gitignore  .gitmodules  CLAUDE.md  analysis.ipynb  pyproject.toml
data/monitor_qa/: example.jsonl
docs/: monitor_qa.md
notebooks/: analysis.ipynb
results/calibration/: number_words_reference.json
results/sft/: gpt-oss-120b-reasonif-sft.checkpoint.jsonl  gpt-oss-120b-reasonif-sft.parquet  gpt-oss-20b-reasonif-sft.checkpoint.jsonl  gpt-oss-20b-reasonif-sft.parquet  qwen3-32b-reasonif-sft.checkpoint.jsonl  qwen3-32b-reasonif-sft.parquet  qwen3-8b-reasonif-sft.checkpoint.jsonl  qwen3-8b-reasonif-sft.parquet
scripts/: build_monitorqa.py  grade_ignore_question.py  migrate_monitor_rollouts.py  overnight_remaining.sh  run_eval.py  run_reasonif_sweep.py  test_gptoss_no_reason.py  test_qwen_no_reason.py  test_qwen_prefill.py
scripts/analysis/: _color_test.py  build_eval_manifest.py  build_summary_tables.py  inspect_splits.py  plot_monitor_qa_20260413v2.py  plot_monitor_qa_20260413v3.py  plot_monitor_qa_20260413v4.py  plot_monitor_qa_2026_04_08.py  plot_monitor_qa_2026_04_13.py  plot_reasonif_2026_03_13.py  plot_summary_2026_03_18.py  plot_summary_2026_03_20.py  plot_summary_2026_03_24.py  plot_summary_2026_03_31.py  plot_summary_charts.py  prepare_compare_data.py  render_transcript_compare.py  render_transcript_sft.py  render_transcript_single.py  rescore_number_words.py  rollout_viewer.py  sft_viewer.py  summarize.py
scripts/runs/: build_sft_dataset.py  calibrate_word_count.py  effort_eval_ft_ckpts.py  (+45 more)
tests/: test_grading.py  test_splits.py  test_transforms.py
(+59 files in other folders)
